Fixed z-indexes

--- a/src/components/expand/styles.scss
+++ b/src/components/expand/styles.scss
@@ -1,5 +1,7 @@
 @import '~styles/settings';
 
+$z-index-blender: 2;
+$z-index-expand-content: 3;
 $button-width: 430px;
 $button-height: 70px;
 
@@ -20,11 +22,10 @@ $button-height: 70px;
     width: $button-height;
     margin: auto;
     border-radius: 50%;
-    pointer-events: none;
     background: white;
     transition: transform 1s ease-in-out;
     // mix-blend-mode: difference;
-    z-index: 2;
+    z-index: $z-index-blender;
   }
 
   .expand {
@@ -35,12 +36,12 @@ $button-height: 70px;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     visibility: hidden;
     opacity: 0;
     transition: opacity 1s ease-in-out;
-    z-index: 2;
+    z-index: $z-index-expand-content;
 
     &.visible {
       visibility: visible;
@@ -56,19 +57,9 @@ $button-height: 70px;
     height: $button-height;
     width: $button-width;
     position: fixed;
-    z-index: 3;
+    z-index: $z-index-4;
     cursor: pointer;
     transition: all 0.5s ease;
-  }
-
-  .bg {
-    position: fixed;
-    background: #efefef;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
   }
 }
 
