--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -11,7 +11,7 @@
   padding: 0 50px;
   background: $color-white;
   background: linear-gradient(180deg, $color-white 0%, transparent 100%);
-  z-index: 1;
+  z-index: $z-index-4;
 
   .icon {
     width: 20px;
