--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -38,7 +38,7 @@
   }
 
   .sidebar {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     width: 55px;
@@ -66,4 +66,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  button {
+    margin: 40px;
+  }
 }
